k8s/go/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moscow-time-go
  labels:
    app: moscow-time-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moscow-time-go
  template:
    metadata:
      labels:
        app: moscow-time-go
    spec:
      containers:
        - name: moscow-time-go
          image: iviosab/moscow_time_go:latest
          ports:
            - containerPort: 8080
