k8s/go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go-app
  type: LoadBalancer
  ports:
    - port: 8081
